# aerodrome-ai-agent

./: .coveragerc  .env.example  .gcloudignore  .gitignore  CONFIDENCE_SYSTEM_README.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP_COMPLETE.md  SETUP_STATUS.md  add_secrets.py  app.yaml  brain_usage_example.py  cloudbuild.yaml  example_usage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_api.py  run_tests.py  setup.py  setup_gemini.py  test_brain_integration.py  test_orchestrator.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BRAIN_IMPLEMENTATION.md  CDP_SDK_INTEGRATION.md  MEMORY_SYSTEM.md
examples/: cdp_integration_example.py
scripts/: gcp_full_setup.sh  link_billing.sh  manage_secrets.sh  setup_gcloud_auth.sh  verify_setup.py
src/aerodrome_ai_agent/: __init__.py  cli.py  main.py  monitoring.py  orchestrator.py
src/aerodrome_ai_agent/brain/: __init__.py  config.py  core.py  state.py
src/aerodrome_ai_agent/brain/nodes/: __init__.py  observation.py
src/aerodrome_ai_agent/cdp/: __init__.py  config.py  manager.py
src/aerodrome_ai_agent/config/: __init__.py  base.py  settings.py
src/aerodrome_ai_agent/contracts/: __init__.py  addresses.py
src/aerodrome_ai_agent/memory/: __init__.py  config.py  system.py
src/aerodrome_ai_agent/utils/: logger.py
src/api/: __init__.py  main.py  models.py
src/brain/: __init__.py  algorithms.py  confidence_metrics.py  confidence_scorer.py  core.py  core.py.backup  errors.py  knowledge_base.py  query_handler.py  state.py
src/brain/nodes/: __init__.py  analyze.py  decide.py  execute.py  learn.py  observe.py  recall.py
src/cdp/: __init__.py  aerodrome.py  contracts.py  errors.py  gas.py  manager.py  wallet.py
src/config/: secrets.py
src/contracts/: __init__.py  abis.py  addresses.py
src/intelligence/: README.md  __init__.py  example_usage.py  gemini_client.py  pattern_recognition.py  prediction_engine.py
src/memory/: README.md  __init__.py  cache.py  categories.py  example_usage.py  mem0_client.py  memory_categories.py  metrics.py  operations.py  patterns.py  pruning.py  pruning_engine.py  system.py  tiers.py
src/protocol/: __init__.py  aerodrome_client.py  example_usage.py  pool_monitor.py  voting_analyzer.py
static/: 404.html  500.html  robots.txt
tests/: README.md  __init__.py  conftest.py  test_api.py  test_basic.py  test_brain.py  test_cdp.py  test_memory.py  test_orchestrator.py
tests/fixtures/: __init__.py  contract_data.py  market_data.py  memory_data.py
tests/mocks/: __init__.py  cdp_mocks.py  llm_mocks.py  memory_mocks.py
